<resources>
    <string name="app_name">DeTurno</string>
    <string name="search_title">Buscar</string>
    <string name="app_label">DeTurno</string>
    <string name="search_hint">Ej: Cabildo 500</string>
    <string name="radius_label">Radio</string>
    <string name="welcome_title">¡Bienvenid@!</string>
    <string name="you_are_here">Usted esta aqui</string>
    <string name="welcome_message">Ingresá tu ubicación para ver las farmacias de turno más cercanas ;)</string>
    <string name="welcome_text_input_label">Podés ingresarla acá</string>
    <string name="welcome_button_label">o sino</string>
    <string name="welcome_button_text">usá tu ubicación actual</string>
    <string name="tab_text_1">Lista</string>
    <string name="tab_text_2">Mapa</string>
    <string name="list_tab_title">LISTA</string>
    <string name="map_tab_title">MAPA</string>
</resources>